# NuiLite

./: .gitignore  CMakeLists.txt  README.md
demos/: update.sh
demos/PolyPd/: mother.pd
demos/sc/default/: main.scd
demos/sc/grainbuf/: main.scd
demos/sc/livecoding/: main.scd
demos/sc/simple/: main.scd
fateslite/: CMakeLists.txt  FatesDevice.cpp  FatesDevice.h  FatesLib.cpp  FatesLib.h  FatesLite.cpp  FatesLite.h
fateslite/tests/: CMakeLists.txt  fatestest.cpp  libfatestest.cpp  rawfatestest.cpp
nuilite/: CMakeLists.txt  NuiDevice.cpp  NuiDevice.h  NuiDeviceNop.cpp
nuilite/tests/: CMakeLists.txt  libnuitest.cpp  nuitest.cpp  rawfatestest.cpp
pd/: CMakeLists.txt  NuiPd.cpp  NuiPd.h
resources/: sidekick.json
resources/patches/Norns/: stop.sh
resources/sidekick/: sidekick.json
resources/sidekick/patches/Orac/: update.sh
sidekick/: CMakeLists.txt  SKApp.cpp  SKApp.h  SKCallback.cpp  SKCallback.h  SKHardwareCallback.cpp  SKHardwareCallback.h  SKOscCallback.cpp  SKOscCallback.h  SKPrefs.cpp  SKPrefs.h  sidekick.cpp
